2003-11-24  Stefan Seefeld  <seefeld@sympatico.ca>

	* qm/test/result.py: Replace 'property' by 'annotation'.
	* qm/test/share/dtds/result.dtd: Likewise.

2003-11-23  Mark Mitchell  <mark@codesourcery.com>

	* setup.py: Tidy up.  Use "qmtest.py" as the name of the main
	script under Windows.
	* qm/__init__.py: Do not honor qm.config settings under Windows.
	* qm/test/.cvsignore: Add qmtest.py.
	* qm/test/execution_engine.py
	(ExecutionEngine.IsTerminationRequested): Rename to ..
	(ExecutionEngine._IsTerminationRequested): ... this.
	* qm/test/execution_thread.py
	(ExecutionThread.IsTerminationRequested): Rename to ..
	(ExecutionEngine._IsTerminationRequested): ... this.
	* qm/test/qmtest: Do not honor rel_libdir on Windows.
	* qm/test/clasess/pickle_result_stream.py
	(PickleResultStream._is_binary_file): Set it.
	* qm/test/doc/tour.xml: Update for changes in installation
	procedures.
	* qmdist/command/install_scripts.py (install_scripts.run): Process
	both the "qmtest" and the "qmtest.py" script.
	* scripts/qm-release: Remove.

	* .cvsignore: Add build, dist, and MANIFEST.
	* MANIFEST.in: Update for recent changes.
	* setup.py: Put qm/test/classes in lib, not share.  Add more
	metadata.  Correct documentation handling.
	* qm/__init__.py: Import lib_dir from qm.config.
	* common.py (get_lib_directory): New function.
	* qm/test/base.py (get_extension_directories): Use
	get_lib_directory, not get_share_directory.
	* qm/test/clases/__init__.py: New file.
	* qmdist/.cvsignore: Likewise.
	* qmdist/command/.cvsignore: Likeiwse.
	* qmdist/command/__init__.py (get_relative_path): Robustify.
	* qmdist/command/build.py: New file.
	* qmdist/command/build_doc.py (build_doc.call_jade): Put generated
	files in the source directory.
	(build_doc.run): Update accordingly.
	* qmdist/command/install_data.py (install_data.run): Set
	lib_dir in config.py.
	* qmdist/command/install_lib.py: New file.
	* qmdist/command/install_scripts.py: Generalize prefix handling.
