@@ -2,7 +2,6 @@ GNUmakefile
 config.log
 config.cache
 config.status
-qm.spec
 build
 dist
 MANIFEST
