@@ -125,6 +125,5 @@ dnl ####################################################################
 
 AC_OUTPUT(
   GNUmakefile
-  qm.spec
   qm/__version.py
 )
