@@ -1,33 +1,0 @@
-Summary: The CodeSourcery QM (Quality Management) tools.
-Name: qm
-Version: @QM_VERSION@
-Release: 0
-Copyright: Copyright (C) CodeSourcery LLC.
-Group: Development/Tools
-Source0: qm-@QM_VERSION@.tar.gz
-Url: http://www.codesourcery.com/qm
-Provides: qm
-BuildRoot: /var/tmp/qm-@QM_VERSION@
-Prefix: /usr/local
-
-%description
-QM is CodeSourcery's Quality Management toolset.
-
-%prep
-%setup
-
-%build
-./configure --prefix=${RPM_BUILD_ROOT}/usr/local
-make
-
-%install
-make install
-
-%clean
-rm -rf ${RPM_BUILD_ROOT}
-
-%files
-/usr/local/lib/qm/*
-/usr/local/share/qm/*
-/usr/local/bin/*
-/usr/local/share/doc/qm/*
